--- a/app/Resources/views/admin/stays/edit.html.twig
+++ b/app/Resources/views/admin/stays/edit.html.twig
@@ -6,7 +6,7 @@
         <div class="row">
             <div class="col-sm-6 offset-sm-3">
                 <div class="well">
-                    <form class="form-horizontal" action="{{ path('admin_stay_edit', {'id': stay.id}) }}" method="POST">
+                    <form class="form-horizontal" action="{{ path('admin_stay_edit', {id: stay.id}) }}" method="POST">
                         <legend>Edit Stay [ #{{ stay.id }} ]</legend>
                         <div class="form-group">
                             <label class="col-sm-12 control-label" for="stay_edit_booking">Booking</label>
