--- a/app/Resources/views/users/register.html.twig
+++ b/app/Resources/views/users/register.html.twig
@@ -42,7 +42,7 @@
                     <div class="form-group">
                         <label class="col-sm-12 control-label" for="user_password_second">Confirm Password</label>
                         <div class="col-sm-12">
-                            <input type="password" class="form-control" id="user_password_second" placeholder="Password" name="user[password][second]">
+                            <input type="password" class="form-control" id="user_password_second" placeholder="Repeat Password" name="user[password][second]">
                         </div>
                     </div>
                     <div class="form-group">
