--- a/app/Resources/views/admin/bookings/view.html.twig
+++ b/app/Resources/views/admin/bookings/view.html.twig
@@ -5,9 +5,17 @@
     <div class="container body-content text-center">
         <div class="row">
             <div class="col-sm-8 offset-sm-2">
+            
+            
+                {% for msg in app.session.flashbag.get('info')  %}
+                    <div class="alert alert-success" id="info">
+                        {{ msg }}
+                    </div>
+                {% endfor %}
+                
                 <h2>Booking Details [ #{{ booking.id }} ]</h2>
                 <p>
-                    Reserved by email <span class="cl-bold"> {{ booking.userId.email }} </span>
+                    Reserved by email <a href="{{ path('admin_user_view', {id: booking.userId.id}) }}"><span class="cl-bold"> {{ booking.userId.email }} </span></a>
                     on <span class="cl-bold"> {{ booking.dateAdded|date("Y-m-d H:i:s") }} </span>
                 </p>
                 <h4 class="cl-bold">
@@ -16,7 +24,8 @@
                 <p>
                     Checkin: <span class="cl-bold"> {{ booking.checkin|date("Y-m-d") }} </span> | 
                     Checkout: <span class="cl-bold"> {{ booking.checkout|date("Y-m-d") }} </span> | 
-                    <span class="cl-bold"> {{ booking.days }} day(s) </span></p>
+                    <span class="cl-bold"> {{ booking.days }} day(s) </span>
+                </p>
                 <p>
                     Payment: <span class="cl-bold"> {{ booking.payment.name }} </span> |
                     Total Amount: <span class="cl-bold"> ${{ booking.totalAmount}} </span> 
@@ -26,20 +35,73 @@
                     Payment Amount: <span class="cl-bold"> ${{ booking.paymentAmount}} </span>
                 </p>
                 <p>
-                    Category: <span class="cl-bold"> {{ booking.category.name }} </span> |
+                    Category: <a class="custom-a" href="{{ path('admin_category_view', {id: booking.category.id}) }}"><span class="cl-bold"> {{ booking.category.name }} </span></a> |
+                    Room: <a class="custom-a" href="{{ path('admin_room_view', {id: booking.roomId.id}) }}"><span class="cl-bold"> {{ booking.roomId.number }} </span></a>
+                </p>
+                <p>
                     Adults: <span class="icon-find"> {% for i in 1..booking.adults %} {{ "&#xf007;" }} {% endfor %} </span> |
                     Child Bed: <span class="cl-bold"> {% if ( booking.childBed == 1 ) %} Yes {% else %} No {% endif %}</span> |
-                    Room: <span class="cl-bold"> {{ booking.room.number }} </span> |
+                    Guest Count: <span class="cl-bold"> {{ booking.guestCount }} </span>
+                </p>
                 <p>
                     <a class="btn btn-success btn-xs" href="{{ path('admin_booking_edit', {id: booking.id}) }}">Edit Booking</a>
                     <a class="btn btn-danger btn-xs" href="{{ path('admin_booking_delete', {id: booking.id}) }}" onClick="return confirm('Are you sure you want to delete?')">Delete Booking</a>
                 </p>
-        
-                {% if stays|length < booking.adults %} 
+                
+                <form method="POST">
+                    <div class="row">
+                        <div class="col-sm-8 offset-sm-2">
+                            <div class="row">
+                                <div class="col-sm-8 form-group">
+                                    <input type="text" class="form-control icon-find" name="personalNumber" placeholder="&#xF002; Enter personal number" style="color: darkred; border: 1px solid darkred; background: white;" />
+                                    <p>Please, enter 10 digits!</p>
+                                </div>
+                                <div class="col-sm-4">
+                                    <button type="submit" class="btn btn-danger btn-outline mt-0">Find Guest</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+                {% if guest|length == 1 %}
+                    <table class="table table-striped table-hover">
+                    <thead>
+                    <tr>
+                        <th>#</th>
+                        <th>Personal Number</th>
+                        <th>First Name</th>
+                        <th>Father's Name</th>
+                        <th>Last Name</th>
+                        <th>Email</th>
+                        <th>Phone</th>
+                        <th>Action</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                        {% for g in guest %}
+                            <tr>
+                                <td>{{ g.id }}</td>
+                                <td>{{ g.personalNumber }}</td>
+                                <td>{{ g.firstName }}</td>
+                                <td>{{ g.fathersName }}</td>
+                                <td>{{ g.lastName }}</td>
+                                <td>{{ g.email }}</td>
+                                <td>{{ g.phone }}</td>
+                                <td><a href="{{ path('admin_guest_view', {id: g.id}) }}" target=_blank>View</a></td>    
+                            </tr>
+                       {% endfor %}
+                    </tbody>
+                    </table>
+                {% endif %}
+                
+                {% if ( stays|length < booking.guestCount ) and ( booking.paymentAmount == 0.00 ) %} 
                     <h4><button class="btn btn-danger btn-outline" id="Add">Add stay for this booking</button></h4>
                     <div id="add_stay"></div> 
                 {% else %} 
                     <h4><button class="btn btn-danger btn-outline" disabled>Add stay for this booking</button></h4>
+                    {% if ( booking.paymentAmount != 0.00 ) %}
+                        <p>The button is disabled. Awaiting Payment ${{booking.paymentAmount}} !</p>
+                    {% endif %} 
                 {% endif %} 
         
                 <h2>All stays for this booking</h2>
@@ -60,13 +122,15 @@
                             <tr>
                                 <td><a href="{{ path('admin_stay_view', {id: stay.id}) }}"> {{ stay.id }} </a></td>
                                 <td><a href="{{ path('admin_guest_view', {id: stay.guest.id}) }}"> {{ stay.guest.firstName }} {{ stay.guest.fathersName }} {{ stay.guest.lastName }} </a></td>
-                                <td>{% if ( stay.isTerminated == 1 ) %} Yes {% else %} No {% endif %}</td>
+                                <td>{% if ( stay.isTerminated == 1 ) %} Yes on {{ stay.dateOfDeparture|date("Y-m-d H:i:s") }} {% else %} No {% endif %}</td>
                             </tr>
                             {% endfor %}
                         </tbody>
                         </table>
                     </div>
-                {% endif %} 
+                {% endif %}
+                 
+                
             </div>
         </div>  
     </div>
@@ -80,10 +144,14 @@
                     <div class="form-group">
                         <div class="col-sm-12">
                             <select class="form-control" id="stay_guest" name="stay[guest]">
-                                <option value="">Choise Guest</option>
-                                {% for guest in guests %}
-                                    <option value="{{ guest.id }}">{{ guest.personalNumber }} {{ guest.firstName }} {{ guest.fathersName }} {{ guest.lastName }}</option>
-                                {% endfor %}
+                                {% if guest|length != 1 %} 
+                                    <option value="">First Find Guest</option>
+                                {% else %}
+                                    <option value="" selected="selected">Choise Guest</option>
+                                    {% for g in guest %}
+                                        <option value="{{ g.id }}">{{ g.personalNumber }} {{ g.firstName }} {{ g.fathersName }} {{ g.lastName }}</option>
+                                    {% endfor %}
+                                {% endif %} 
                             </select>
                         </div>
                     </div>
