--- a/app/Resources/views/admin/stays/list.html.twig
+++ b/app/Resources/views/admin/stays/list.html.twig
@@ -14,8 +14,8 @@
                 <tr>
                     <th>#</th>
                     <th>Booking</th>
-                    <th>Guest - Personal Number</th>
-                    <th>Guest - Name</th>
+                    <th>Guest</th>
+                    <th>Terminated Stay</th> 
                     <th>Actions</th>
                 </tr>
                 </thead>
@@ -24,8 +24,11 @@
                     <tr>
                         <td>{{ stay.id }}</td>
                         <td><a href="{{ path('admin_booking_view', {id: stay.booking.id}) }}" target=_blank>{{ stay.booking }}</a></td>
-                        <td><a href="{{ path('admin_guest_view', {id: stay.guest.id}) }}" target=_blank>{{ stay.guest.personalNumber }}</a></td>
-                        <td><a href="{{ path('admin_guest_view', {id: stay.guest.id}) }}" target=_blank>{{ stay.guest.firstName }} {{ stay.guest.fathersName }} {{ stay.guest.lastName }}</a></td>
+                        <td>
+                            <a href="{{ path('admin_guest_view', {id: stay.guest.id}) }}" target=_blank>{{ stay.guest.personalNumber }}</a>
+                            <a href="{{ path('admin_guest_view', {id: stay.guest.id}) }}" target=_blank>{{ stay.guest.firstName }} {{ stay.guest.fathersName }} {{ stay.guest.lastName }}</a>
+                        </td>
+                        <td>{% if ( stay.isTerminated == 1 ) %} Yes {% else %} No {% endif %}</td>
                         <td>
                             <a href="{{ path('admin_stay_view', {id: stay.id}) }}" target=_blank>View</a>
                             <a href="{{ path('admin_stay_edit', {id: stay.id}) }}" target=_blank>Edit</a>
