--- a/app/Resources/views/users/createBooking.html.twig
+++ b/app/Resources/views/users/createBooking.html.twig
@@ -20,33 +20,39 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-sm-12 control-label" for="booking_adults">Adults</label>
+                        <label class="col-sm-12 control-label" for="booking_adults">Adults and children over 6 years old</label>
                         <div class="col-sm-12">
                             <select class="form-control" id="booking_adults" name="booking[adults]">
-                                <option value="null">Please Select</option>
+                                <option value="" selected="selected">Please Select</option>
                                 {% for i in 1..category.beds %}
                                     <option value="{{ i }}">{{ i }}</option>
                                 {% endfor %}
                             </select>
                         </div>
+                        <div class="form-errors">
+                            {{ form_errors(form.adults) }}
+                        </div>
                     </div>
                     <div class="form-group">
                         <div class="col-sm-12">
                             <input type="checkbox" id="booking_childBed"  name="booking[childBed]" />
-                            <label for="booking_childBed">I want a child bed</label>
+                            <label for="booking_childBed">with a child bed (children aged 6 and under)</label>
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="col-sm-12 control-label" for="booking_payment">Payment</label>
                         <div class="col-sm-12">
                             <select class="form-control" id="booking_payment" name="booking[payment]">
-                                <option value="null">Please Select</option>
+                                <option value="" selected="selected">Please Select</option>
                                 {% for payment in payments %}
                                     <option value="{{ payment.id }}">
                                         {{ payment.name }}
                                     </option>
                                 {% endfor %}
                             </select>
+                        </div>
+                        <div class="form-errors">
+                            {{ form_errors(form.payment) }}
                         </div>
                     </div>
                     <div class="form-group">
