--- a/app/Resources/views/admin/categories/view.html.twig
+++ b/app/Resources/views/admin/categories/view.html.twig
@@ -8,22 +8,32 @@
                 <img src="{{ asset('uploads/images/categories/' ~ category.image)}}" alt="img" class="img-thumbnail">
             </div>
             <div class="col-md-6">
-                <h2>{{ category.name }}</h2>
-                <p>{{ category.description }}</p>
-                <p>Beds: {{ category.beds }}</p>
-                <p>Price: ${{ category.price }}</p>
+                <h2 style="margin-bottom: 1rem;">Category Details [ #{{ category.id }} ]</h2>
+                <h4 class="cl-bold text-danger">
+                    {{ category.name }}
+                </h4>
+                <hr />
                 <p>
-                    <a class="btn btn-success btn-xs" href="{{ path('admin_category_edit', {id: category.id}) }}">Edit</a>
-                    <a class="btn btn-danger btn-xs"  href="{{ path('admin_category_delete', {id: category.id}) }}" onClick="return confirm('Are you sure you want to delete?')">Delete</a>
+                    Beds: <span class="cl-bold"> {{ category.beds }} </span> |
+                    Price: <span class="cl-bold"> ${{ category.price }} </span>
+                </p>
+                <hr />
+                <p><span class="cl-bold">Description:</span> {{ category.description }}</p>
+                <hr style="margin-bottom: 0">
+                <p style="margin-bottom: 3rem;">
+                    <a class="btn btn-success btn-xs" href="{{ path('admin_category_edit', {id: category.id}) }}">Edit Category</a>
+                    <a class="btn btn-danger btn-xs"  href="{{ path('admin_category_delete', {id: category.id}) }}" onClick="return confirm('Are you sure you want to delete?')">Delete Category</a>
                 </p>
                 <h2>All numbers</h2>
+                <hr />
                 <p>
                     {% for room in rooms %}
                         <a href="{{ path('admin_room_view', {id: room.id}) }}" target=_blank>{{ room.number }}</a>
                     {% endfor %} 
                 </p>
-                <p>Count: {{ rooms|length }}</p> 
-                <p>From {{ firstRoomId.number }} to {{ lastRoomId.number }}</p>
+                <hr />
+                <p>From {{ firstRoomId.number }} to {{ lastRoomId.number }} (Count: {{ roomsCount }})</p>
+                <hr />
             </div>
         </div>
     </div>
