--- a/app/Resources/views/admin/guests/view.html.twig
+++ b/app/Resources/views/admin/guests/view.html.twig
@@ -3,37 +3,56 @@
 {% block body %}
 
     <div class="container body-content text-center">
-        <h2>{{ guest.firstName }} {{ guest.fathersName }} {{ guest.lastName }} {{ guest.personalNumber }}</h2>
-        <h4>Email: {{ guest.email }} | Phone: {{ guest.phone }}</h4>
-        <p>
-            <a class="btn btn-success btn-xs" href="{{ path('admin_guest_edit', {id: guest.id}) }}">Edit Guest</a>
-            <a class="btn btn-danger btn-xs" href="{{ path('admin_guest_delete', {id: guest.id}) }}" onClick="return confirm('Are you sure you want to delete {{ guest.firstName }} {{ guest.fathersName }} {{ guest.lastName }} ?')">Delete Guest</a>
-        </p>
-        <h2>All stays for this guest</h2>
-        {% if stays|length == 0 %} 
-            <p>No result for stays</p>
-        {% else %} 
-            <div class="row">
-                <table class="table table-striped table-hover">
-                    <thead>
-                    <tr>
-                        <th>Stay Id</th>
-                        <th>Room Number</th>
-                        <th>Booking Id</th> 
-                    </tr>
-                    </thead>
-                    <tbody>
-                    {% for stay in stays %}
-                        <tr>
-                            <td><a href="{{ path('admin_stay_view', {id: stay.id}) }}"> {{ stay.id }} </a></td>
-                            <td><a href="{{ path('admin_room_view', {id: stay.booking.roomId.id}) }}"> {{ stay.booking.roomId.number }} </a></td>
-                            <td><a href="{{ path('admin_booking_view', {id: stay.booking.id}) }}"> {{ stay.booking }} </a></td>
-                        </tr>
-                   {% endfor %}
-                    </tbody>
-                </table>
-            </div> 
-        {% endif %}      
+        <div class="row">
+            <div class="col-sm-8 offset-sm-2">
+            
+                <h2 style="margin-bottom: 1rem;">Guest Details [ #{{ guest.id }} ]</h2>
+                <h4 class="cl-bold text-danger">
+                    {{ guest.firstName }} {{ guest.fathersName }} {{ guest.lastName }}
+                </h4>
+                <hr />
+                <p class="cl-bold">Personal Number: {{ guest.personalNumber }}</p>
+                <hr />
+                <p class="cl-bold">Email: {{ guest.email }}</p>
+                <hr />
+                <p class="cl-bold">Phone: {{ guest.phone }}</p>
+                <hr />
+                <p>
+                    <a class="btn btn-success btn-xs" href="{{ path('admin_guest_edit', {id: guest.id}) }}">Edit Guest</a>
+                    <a class="btn btn-danger btn-xs" href="{{ path('admin_guest_delete', {id: guest.id}) }}" onClick="return confirm('Are you sure you want to delete {{ guest.firstName }} {{ guest.fathersName }} {{ guest.lastName }} ?')">Delete Guest</a>
+                </p>
+            
+        
+                <h2>All stays for this guest</h2>
+                {% if stays|length == 0 %} 
+                    <p>No result for stays</p>
+                {% else %} 
+                    <div class="row">
+                        <table class="table table-striped table-hover">
+                        <thead>
+                            <tr>
+                                <th>Stay Id</th>
+                                <th>Room Number</th>
+                                <th>Category</th>
+                                <th>Booking Id</th> 
+                            </tr>
+                        </thead>
+                        <tbody>
+                        {% for stay in stays %}
+                            <tr>
+                                <td><a href="{{ path('admin_stay_view', {id: stay.id}) }}"> {{ stay.id }} </a></td>
+                                <td><a href="{{ path('admin_room_view', {id: stay.booking.roomId.id}) }}"> {{ stay.booking.roomId.number }} </a></td>
+                                <td><a href="{{ path('admin_room_view', {id: stay.booking.roomId.id}) }}"> {{ stay.booking.roomId.category }} </a></td>
+                                <td><a href="{{ path('admin_booking_view', {id: stay.booking.id}) }}"> {{ stay.booking }} </a></td>
+                            </tr>
+                        {% endfor %}
+                        </tbody>
+                        </table>
+                    </div> 
+                {% endif %}
+              
+            </div>
+        </div>
     </div>
 
 {% endblock %}
