--- a/app/Resources/views/admin/rooms/view.html.twig
+++ b/app/Resources/views/admin/rooms/view.html.twig
@@ -3,46 +3,55 @@
 {% block body %}
 
     <div class="container body-content text-center">
-        <h2>Room Details [ #{{ room.id }} ]</h2>
-        <p>
-            Number: <span class="cl-bold"> {{ room.number }} </span> |
-            Category: <a href="{{ path('admin_category_view', {id: room.category.id}) }}" class="cl-bold"> {{ room.category }} </a>
-        </p>
-        <p>
-            Beds: <span class="cl-bold"> {{ room.category.beds }} </span> | 
-            Price: <span class="cl-bold"> ${{ room.category.price }} </span>
-        </p>
-        <p>
-            <a class="btn btn-success btn-xs" href="{{ path('admin_room_edit', {id: room.id}) }}">Edit Room</a>
-            <a class="btn btn-danger btn-xs" href="{{ path('admin_room_delete', {id: room.id}) }}" onClick="return confirm('Are you sure you want to delete?')">Delete Room</a>
-        </p>
-        <h2>All bookings for this room</h2>
-        {% if bookings|length == 0 %} 
-            <p>No result for bookings</p>
-        {% else %} 
-            <div class="row">
-                <table class="table table-striped table-hover ">
-                    <thead>
-                    <tr>
-                        <th>Booking Id</th>
-                        <th>Checkin</th>
-                        <th>Checkout</th>
-                        <th>Status</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    {% for booking in bookings %}
-                        <tr>
-                            <td><a href="{{ path('admin_booking_view', {id: booking.id}) }}"> {{ booking.id }} </a></td>
-                            <td> {{ booking.checkin|date("Y-m-d") }} </td>
-                            <td> {{ booking.checkout|date("Y-m-d") }} </td>
-                            <td> {{ booking.status }} </td>
-                        </tr>
-                    {% endfor %}
-                    </tbody>
-                </table>
+        <div class="row">
+            <div class="col-sm-8 offset-sm-2">
+
+                <h2 style="margin-bottom: 1rem;">Room Details [ #{{ room.id }} ]</h2>
+                <h4 class="cl-bold text-danger">
+                     <p>Category: <a class="text-danger" href="{{ path('admin_category_view', {id: room.category.id}) }}"> {{ room.category }} </a></p>
+                </h4>
+                <hr />
+                <p>Number: <span class="cl-bold"> {{ room.number }} </span></p>
+                <hr />
+                <p>Beds: <span class="cl-bold"> {{ room.category.beds }} </span></p>
+                <hr />
+                <p>Price: <span class="cl-bold"> ${{ room.category.price }} </span></p>
+                <hr />
+                <p>
+                    <a class="btn btn-success btn-xs" href="{{ path('admin_room_edit', {id: room.id}) }}">Edit Room</a>
+                    <a class="btn btn-danger btn-xs" href="{{ path('admin_room_delete', {id: room.id}) }}" onClick="return confirm('Are you sure you want to delete?')">Delete Room</a>
+                </p>
+                
+                <h2>All bookings for this room</h2>
+                {% if bookings|length == 0 %} 
+                    <p>No result for bookings</p>
+                {% else %} 
+                    <div class="row">
+                        <table class="table table-striped table-hover ">
+                        <thead>
+                            <tr>
+                                <th>Booking Id</th>
+                                <th>Checkin</th>
+                                <th>Checkout</th>
+                                <th>Status</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for booking in bookings %}
+                            <tr>
+                                <td><a href="{{ path('admin_booking_view', {id: booking.id}) }}"> {{ booking.id }} </a></td>
+                                <td> {{ booking.checkin|date("Y-m-d") }} </td>
+                                <td> {{ booking.checkout|date("Y-m-d") }} </td>
+                                <td> {{ booking.status }} </td>
+                            </tr>
+                            {% endfor %}
+                        </tbody>
+                        </table>
+                    </div>
+               {% endif %} 
+                     
             </div>
-        {% endif %}       
+        </div>
     </div>
 
 {% endblock %}
