--- a/app/Resources/views/admin/users/view.html.twig
+++ b/app/Resources/views/admin/users/view.html.twig
@@ -3,42 +3,53 @@
 {% block body %}
 
     <div class="container body-content text-center">
-        <h2>User Details [ #{{ user.id }} ]</h2>
-        <p>
-            Email: <span class="cl-bold"> {{ user.email }} </span> |
-            Login Name: <span class="cl-bold"> {{ user.loginName }} </span> |
-        </p>
-        <p>
-            <a class="btn btn-success btn-xs" href="{{ path('admin_user_edit', {id: user.id}) }}">Edit User</a>
-            <a class="btn btn-danger btn-xs" href="{{ path('admin_user_delete', {id: user.id}) }}" onClick="return confirm('Are you sure you want to delete?')">Delete User</a>
-        </p>
-        <h2>All bookings for this user</h2>
-        {% if bookings|length == 0 %} 
-            <p>No result for bookings</p>
-        {% else %} 
-            <div class="row">
-                <table class="table table-striped table-hover ">
-                    <thead>
-                    <tr>
-                        <th>Booking Id</th>
-                        <th>Checkin</th>
-                        <th>Checkout</th>
-                        <th>Status</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    {% for booking in bookings %}
-                        <tr>
-                            <td><a href="{{ path('admin_booking_view', {id: booking.id}) }}"> {{ booking.id }} </a></td>
-                            <td> {{ booking.checkin|date("Y-m-d") }} </td>
-                            <td> {{ booking.checkout|date("Y-m-d") }} </td>
-                            <td> {{ booking.status }} </td>
-                        </tr>
-                    {% endfor %}
-                    </tbody>
-                </table>
+        <div class="row">
+            <div class="col-sm-8 offset-sm-2"> 
+              
+                <h2 style="margin-bottom: 1rem;">User Details [ #{{ user.id }} ]</h2>
+                <h4 class="cl-bold text-danger">
+                    {% if user.isAdmin() %} The Role Is Admin {% else %} The Role Is Not Admin {% endif %}
+                </h4>
+                <hr />
+                <p>Email: <span class="cl-bold"> {{ user.email }} </span></p>
+                <hr />
+                <p>Login Name: <span class="cl-bold"> {{ user.loginName }} </span></p>
+                <hr />
+                <p>
+                    <a class="btn btn-success btn-xs" href="{{ path('admin_user_edit', {id: user.id}) }}">Edit User</a>
+                    <a class="btn btn-danger btn-xs" href="{{ path('admin_user_delete', {id: user.id}) }}" onClick="return confirm('Are you sure you want to delete?')">Delete User</a>
+                </p>
+            
+                <h2>All bookings for this user</h2>
+                {% if bookings|length == 0 %} 
+                    <p>No result for bookings</p>
+                {% else %} 
+                    <div class="row">
+                        <table class="table table-striped table-hover ">
+                        <thead>
+                            <tr>
+                            <th>Booking Id</th>
+                            <th>Checkin</th>
+                            <th>Checkout</th>
+                            <th>Status</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for booking in bookings %}
+                                <tr>
+                                <td><a href="{{ path('admin_booking_view', {id: booking.id}) }}"> {{ booking.id }} </a></td>
+                                <td> {{ booking.checkin|date("Y-m-d") }} </td>
+                                <td> {{ booking.checkout|date("Y-m-d") }} </td>
+                                <td> {{ booking.status }} </td>
+                                </tr>
+                            {% endfor %}
+                        </tbody>
+                        </table>
+                    </div>
+                {% endif %}
+                
             </div>
-        {% endif %}       
+        </div>       
     </div>
 
 {% endblock %}
