--- a/app/Resources/views/admin/statuses/list.html.twig
+++ b/app/Resources/views/admin/statuses/list.html.twig
@@ -23,7 +23,7 @@
                         <td>{{ status.id }}</td>
                         <td>{{ status.name }}</td>
                         <td>
-                            <a href="{{ path('admin_status_edit', {id: status.id}) }}">Edit</a>
+                            <a class="text-primary" href="{{ path('admin_status_edit', {id: status.id}) }}">Edit</a>
                             <a href="{{ path('admin_status_delete', {id: status.id}) }}" onClick="return confirm('Are you sure you want to delete status {{ status.name }} ?')">Delete</a>
                         </td>
                     </tr>
