--- a/app/Resources/views/admin/stays/view.html.twig
+++ b/app/Resources/views/admin/stays/view.html.twig
@@ -38,7 +38,7 @@
                 <p><span class="cl-bold">Note:</span> {{ stay.note }}</p>
                 <hr />
                 <p>
-                    <a class="btn btn-success btn-xs" href="{{ path('admin_stay_edit', {id: stay.id}) }}">Edit Stay</a>
+                    <a class="btn btn-primary btn-xs" href="{{ path('admin_stay_edit', {id: stay.id}) }}">Edit Stay</a>
                     <a class="btn btn-danger btn-xs" href="{{ path('admin_stay_delete', {id: stay.id}) }}" onClick="return confirm('Are you sure you want to delete?')">Delete Stay</a>
                 </p>
                 
