--- a/app/Resources/views/admin/bookings/list.html.twig
+++ b/app/Resources/views/admin/bookings/list.html.twig
@@ -38,8 +38,8 @@
                             <td>{{ booking.payment }}</td>
                             <td>{{ booking.status }}</td>
                             <td>
-                                <a href="{{ path('admin_booking_view', {id: booking.id}) }}" target=_blank>View</a>
-                                <a href="{{ path('admin_booking_edit', {id: booking.id}) }}" target=_blank>Edit</a>
+                                <a class="text-success" href="{{ path('admin_booking_view', {id: booking.id}) }}" target=_blank>View</a>
+                                <a class="text-primary" href="{{ path('admin_booking_edit', {id: booking.id}) }}" target=_blank>Edit</a>
                                 <a href="{{ path('admin_booking_delete', {id: booking.id}) }}" onClick="return confirm('Are you sure you want to delete booking with id {{ booking.id}} ?')">Delete</a>
                             </td>
                         </tr>
