--- a/app/Resources/views/admin/categories/list.html.twig
+++ b/app/Resources/views/admin/categories/list.html.twig
@@ -27,8 +27,8 @@
                         <td>{{ category.beds }}</td>
                         <td>{{ category.price }}</td>
                         <td>
-                            <a href="{{ path('admin_category_view', {id: category.id}) }}" target=_blank>View</a>
-                            <a href="{{ path('admin_category_edit', {id: category.id}) }}" target=_blank>Edit</a>
+                            <a class="text-success" href="{{ path('admin_category_view', {id: category.id}) }}" target=_blank>View</a>
+                            <a class="text-primary" href="{{ path('admin_category_edit', {id: category.id}) }}" target=_blank>Edit</a>
                             <a href="{{ path('admin_category_delete', {id: category.id}) }}" onClick="return confirm('Are you sure you want to delete category {{ category.name }} ?')">Delete</a>
                         </td>
                     </tr>
