--- a/app/Resources/views/admin/categories/view.html.twig
+++ b/app/Resources/views/admin/categories/view.html.twig
@@ -21,7 +21,7 @@
                 <p><span class="cl-bold">Description:</span> {{ category.description }}</p>
                 <hr style="margin-bottom: 0">
                 <p style="margin-bottom: 3rem;">
-                    <a class="btn btn-success btn-xs" href="{{ path('admin_category_edit', {id: category.id}) }}">Edit Category</a>
+                    <a class="btn btn-primary btn-xs" href="{{ path('admin_category_edit', {id: category.id}) }}">Edit Category</a>
                     <a class="btn btn-danger btn-xs"  href="{{ path('admin_category_delete', {id: category.id}) }}" onClick="return confirm('Are you sure you want to delete?')">Delete Category</a>
                 </p>
                 <h2>All numbers</h2>
