--- a/app/Resources/views/admin/guests/create.html.twig
+++ b/app/Resources/views/admin/guests/create.html.twig
@@ -50,6 +50,7 @@
                     </div>
                     <div class="form-group">
                         <div class="col-sm-4 col-sm-offset-4">
+                            <a class="a-cancel" href="{{ path('admin_guests') }}">Cancel</a>
                             <button type="submit" class="btn btn-danger">Submit</button>
                         </div>
                     </div>
