--- a/app/Resources/views/admin/guests/edit.html.twig
+++ b/app/Resources/views/admin/guests/edit.html.twig
@@ -46,7 +46,7 @@
                     {{ form_row(form._token) }}
                     <div class="form-group">
                         <div class="col-sm-4 col-sm-offset-4">
-                            <a class="btn btn-primary" href="{{ path('admin_guests') }}">Cancel</a>
+                            <a class="a-cancel" href="{{ path('admin_guests') }}">Cancel</a>
                             <button type="submit" class="btn btn-danger">Submit</button>
                         </div>
                     </div>
