--- a/app/Resources/views/admin/guests/list.html.twig
+++ b/app/Resources/views/admin/guests/list.html.twig
@@ -54,8 +54,8 @@
                         <td>{{ guest.email }}</td>
                         <td>{{ guest.phone }}</td>
                         <td>
-                            <a href="{{ path('admin_guest_view', {id: guest.id}) }}" target=_blank>View</a>
-                            <a href="{{ path('admin_guest_edit', {id: guest.id}) }}" target=_blank>Edit</a>
+                            <a class="text-success" href="{{ path('admin_guest_view', {id: guest.id}) }}" target=_blank>View</a>
+                            <a class="text-primary" href="{{ path('admin_guest_edit', {id: guest.id}) }}" target=_blank>Edit</a>
                             <a href="{{ path('admin_guest_delete', {id: guest.id}) }}" onClick="return confirm('Are you sure you want to delete {{ guest.firstName }} {{ guest.fathersName }} {{ guest.lastName }} ?')">Delete</a>
                         </td>
                     </tr>
