--- a/app/Resources/views/admin/rooms/list.html.twig
+++ b/app/Resources/views/admin/rooms/list.html.twig
@@ -41,8 +41,8 @@
                         <td>{{ room.number }}</td>
                         <td>{{ room.category.name }}</td>
                         <td>
-                            <a href="{{ path('admin_room_view', {id: room.id}) }}" target=_blank>View</a>
-                            <a href="{{ path('admin_room_edit', {id: room.id}) }}" target=_blank>Edit</a>
+                            <a class="text-success" href="{{ path('admin_room_view', {id: room.id}) }}" target=_blank>View</a>
+                            <a class="text-primary" href="{{ path('admin_room_edit', {id: room.id}) }}" target=_blank>Edit</a>
                             <a href="{{ path('admin_room_delete', {id: room.id}) }}" onClick="return confirm('Are you sure you want to delete room with number {{ room.number }} ?')">Delete</a>
                         </td>
                     </tr>
