--- a/app/Resources/views/admin/statuses/create.html.twig
+++ b/app/Resources/views/admin/statuses/create.html.twig
@@ -17,7 +17,7 @@
 
                     <div class="form-group">
                         <div class="col-sm-4 col-sm-offset-4">
-                            <a class="btn btn-default" href="{{ path('admin_statuses') }}">Cancel</a>
+                            <a class="a-cancel" href="{{ path('admin_statuses') }}">Cancel</a>
                             <button type="submit" class="btn btn-danger">Submit</button>
                         </div>
                     </div>
