--- a/app/Resources/views/admin/users/list.html.twig
+++ b/app/Resources/views/admin/users/list.html.twig
@@ -42,8 +42,8 @@
                                 <td>{{ user.email }}</td>
                                 <td>{{ user.loginName}}</td>
                                 <td>
-                                    <a href="{{ path('admin_user_view', {id: user.id}) }}" {% if user.isAdmin() %} class="td-actions-admin" {% endif %} target=_blank>View</a>
-                                    <a href="{{ path('admin_user_edit', { 'id': user.id}) }}" {% if user.isAdmin() %} class="td-actions-admin" {% endif %} target=_blank>Edit</a>
+                                    <a class="text-success" href="{{ path('admin_user_view', {id: user.id}) }}" {% if user.isAdmin() %} class="td-actions-admin" {% endif %} target=_blank>View</a>
+                                    <a class="text-primary" href="{{ path('admin_user_edit', { 'id': user.id}) }}" {% if user.isAdmin() %} class="td-actions-admin" {% endif %} target=_blank>Edit</a>
                                     <a href="{{ path('admin_user_delete', {id: user.id}) }}" onClick="return confirm('Are you sure you want to delete {{ user.email }} ?')" {% if user.isAdmin() %} class="td-actions-admin" {% endif %} >Delete</a>
                                 </td>
                             </tr>
