--- a/app/Resources/views/admin/users/view.html.twig
+++ b/app/Resources/views/admin/users/view.html.twig
@@ -16,7 +16,7 @@
                 <p>Login Name: <span class="cl-bold"> {{ user.loginName }} </span></p>
                 <hr />
                 <p>
-                    <a class="btn btn-success btn-xs" href="{{ path('admin_user_edit', {id: user.id}) }}">Edit User</a>
+                    <a class="btn btn-primary btn-xs" href="{{ path('admin_user_edit', {id: user.id}) }}">Edit User</a>
                     <a class="btn btn-danger btn-xs" href="{{ path('admin_user_delete', {id: user.id}) }}" onClick="return confirm('Are you sure you want to delete?')">Delete User</a>
                 </p>
             
